--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "apollo-link-http": "^1.5.4",
+    "axios": "^0.18.0",
+    "sass-loader": "^7.1.0",
+    "vant": "^1.1.16",
+    "vue": "^2.5.17",
+    "vue-apollo": "^3.0.0-beta.10",
+    "vue-infinite-loading": "^2.3.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
+    "graphql-tag": "^2.9.0",
+    "vue-cli-plugin-apollo": "^0.16.2",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
